--- a/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
@@ -21,9 +21,37 @@
         <a class="{{currentRoute 'introduction-supporter'}}" href="{{pathFor 'introduction-supporter'}}"><button class="button"> Get Started </button></a>
       </div> <!-- end .col-xs-12 -->
     </div> <!-- end of row -->
+	{{>signupForUpdates}}
     <div class="BrowseProjects">
       <h1><a class="{{currentRoute 'project'}}" href="{{pathFor 'project'}}"> Browse Projects </a> </h1>
     </div>
+   
   </div> <!--end container-->
+</template>
+
+<template name="signupForUpdates">
+  <section class="center-block" title="signupForUpdates">
+<!-- Begin MailChimp Signup Form -->
+<div id="mc_embed_signup">
+<form action="http://gemmovement.us1.list-manage.com/subscribe/post?u=9eae221f1d235ebbd8a749993&amp;id=d6335be721" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+    <h2>Subscribe to our mailing list</h2>
+    <div class="mc-field-group">
+    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+    </label>
+    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+    </div>
+    <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9eae221f1d235ebbd8a749993_d6335be721" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='http://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+  </section>
 </template>
 
