--- a/app/imports/ui/components/header.html
+++ b/app/imports/ui/components/header.html
@@ -11,7 +11,7 @@
         <!--<img class="navbar-brand gem-logo-primary" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo">-->
         <a class="" href="{{pathFor 'landing-page'}}"><img class="navbar-brand logo-styling" href="{{pathFor 'landing-page'}}" src="/logo.png" alt="GEM Movement Logo"> </a>
       </div> <!--end of navbar-header -->
-      
+
       <div class="nav navbar-nav">
        <h1> G.E.M Movement </h1>
       </div>
@@ -19,14 +19,14 @@
       <div class="collapse navbar-collapse">
         {{#if currentUser}}
          <ul class="nav navbar-nav">
-          <li class="{{currentRoute 'dashboard'}}"><a href="{{pathFor 'dashboard'}}">Dashboard</a></li>
+          <li class="{{isActiveRoute 'dashboard'}}"><a href="{{pathFor 'dashboard'}}">Dashboard</a></li>
           {{#if isInRole 'admin'}}
           {{> optRender name ='invitesPageButton'}}
           {{/if}}
           {{#if isInRole 'tester'}}
-          <li class="{{currentRoute 'profile'}}"><a href="{{pathFor 'profile'}}">Profile</a></li>
+          <li class="{{isActiveRoute 'profile'}}"><a href="{{pathFor 'profile'}}">Profile</a></li>
           {{/if}}
-         </ul> 
+         </ul>
          <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{currentUser.emails.[0].address}} <span class="caret"></span></a>
@@ -34,14 +34,14 @@
               <li class="logout"><a href="{{pathFor 'login'}}">Logout</a></li>
             </ul>
            </li>
-          </ul> 
+          </ul>
         {{else}}
 
          <ul class="nav navbar-nav navbar-right">
           <!--<li>{{> loginButtons align="right"}}</li>-->
-          <li class="{{currentRoute 'login'}}"><a href="{{pathFor 'login'}}"> <button class="button">Sign In</button> </a></li>
-          <li class="{{currentRoute 'signup'}}"><a href="{{pathFor 'signup'}}"><button class="button">Register</button></a></li>
-         </ul> 
+          <li class="{{isActiveRoute 'login'}}"><a href="{{pathFor 'login'}}"> <button class="button">Sign In</button> </a></li>
+          <li class="{{isActiveRoute 'signup'}}"><a href="{{pathFor 'signup'}}"><button class="button">Register</button></a></li>
+         </ul>
         {{/if}} <!-- end of if else currentUser -->
       </div> <!-- end .navbar-collapse -->
    </div> <!-- end of container-fluid -->
