--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -1,49 +1,78 @@
 <template name="header">
-  <nav class="navbar navbar-default nav-styling" role="navigation">
-   <div class="container-fluid" >
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <!--<img class="navbar-brand gem-logo-primary" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo">-->
-        <a class="" href="{{pathFor 'landing-page'}}"><img class="navbar-brand logo-styling" href="{{pathFor 'landing-page'}}" src="/logo.png" alt="GEM Movement Logo"> </a>
-      </div> <!--end of navbar-header -->
+
+<nav class="navbar navbar-default">
+
+<style>
+.col-xs-2 p label{
+	width:100px;
+	font-weight:400;
+	text-align:right;
+}
+.col-xs-2 p label span{
+	color:red;
+}
+input[type="text"], input[type="password"]{
+	    width: 100%;
+    height: 25px;
+    border: 1px solid #d2d2d2;
+}
+.no-padding{
+	padding:0px !important
+}
+.custom-button{
+	background:#94c11f;
+	border:0px;
+	color:#fff;
+	height:30px;
+	padding:0px 40px;
+	line-height:30px;
+	border-radius:0px;
+}
+
+.navbar-default{
+	background:#fff;
+}
+.footer{
+	background:#f39200;
+}
+.footer p{
+	margin:0px;
+	line-height:50px;
+}
+body{
+font-size:14px;
+background:#fff;
+}
+
+@media (min-width: 1200px){
+.container {
+    width: 100%;
+}
+}
+
+</style>
+
+<div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       
-      <div class="nav navbar-nav">
-       <h1> G.E.M Movement </h1>
-      </div>
+    </div>
 
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        {{#if currentUser}}
-         <ul class="nav navbar-nav">
-          <li class="{{currentRoute 'dashboard'}}"><a href="{{pathFor 'dashboard'}}">Dashboard</a></li>
-          {{#if isInRole 'admin'}}
-          {{> optRender name ='invitesPageButton'}}
-          {{/if}}
-          {{#if isInRole 'tester'}}
-          <li class="{{currentRoute 'profile'}}"><a href="{{pathFor 'profile'}}">Profile</a></li>
-          {{/if}}
-         </ul> 
-         <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{currentUser.emails.[0].address}} <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li class="logout"><a href="{{pathFor 'login'}}">Logout</a></li>
-            </ul>
-           </li>
-          </ul> 
-        {{else}}
-
-         <ul class="nav navbar-nav navbar-right">
-          <!--<li>{{> loginButtons align="right"}}</li>-->
-          <li class="{{currentRoute 'login'}}"><a href="{{pathFor 'login'}}"> <button class="button">Sign In</button> </a></li>
-          <li class="{{currentRoute 'signup'}}"><a href="{{pathFor 'signup'}}"><button class="button">Register</button></a></li>
-         </ul> 
-        {{/if}} <!-- end of if else currentUser -->
-      </div> <!-- end .navbar-collapse -->
-   </div> <!-- end of container-fluid -->
-  </nav>  <!-- end of navbar -->
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+     
+      
+      <ul class="nav navbar-nav navbar-right">
+       <img src="http://localhost:3000/logo11.png"/>
+        
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 </template>
