--- a/app/packages/gemapp-core/lib/client/templates/public/login.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/login.html
@@ -1,22 +1,34 @@
 <template name="login">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <h3 class="page-header">Login</h3>
-      <p class="alert alert-info">To login to the example user account, use: <strong>beatrix@beta.com</strong> for Email Address and <strong>password</strong> for Password.</p>
-      <form id="application-login" class="login">
-        <div class="form-group">
-          <label for="emailAddress">Email Address</label>
-          <input type="email" name="emailAddress" class="form-control" placeholder="Email Address">
-        </div> <!-- end .form-group -->
-        <div class="form-group">
-          <label for="password"><span class="pull-left">Password</span> <a class="pull-right" href="{{pathFor 'recover-password'}}">Forgot Password?</a></label>
-          <input type="password" name="password" class="form-control" placeholder="Password">
-        </div> <!-- end .form-group -->
-        <div class="form-group">
-          <input type="submit" class="btn btn-success" value="Login">
-        </div> <!-- end .form-group -->
-      </form>
-      <p>Don't have an account? <a href="{{pathFor 'signup'}}">Sign Up</a>.</p>
-    </div> <!-- end .col-xs-12 -->
-  </div> <!-- end .row -->
+ <div class="row">
+ <br/>
+<br/>
+<div class="col-lg-7"></div>
+
+<div class="col-lg-5 col-xs-12">
+<div class="row">
+<div class="col-xs-2 no-padding"><p><label>User<span>*</span>: </label></p></div>
+<div class="col-xs-10"><input type="text" class="form-group" placeholder="Username"></div>
+</div>
+<div class="row">
+<div class="col-xs-2 no-padding"><p><label>Password<span>*</span>: </label></p></div>
+<div class="col-xs-10"><input type="password" class="form-group" placeholder="Password"></div>
+</div>
+<div class="row">
+<div class="col-xs-2"></div>
+<div class="col-xs-10">
+
+<div class="col-xs-6 no-padding"><input type="checkbox" name="vehicle1" value="Bike">Keep if connected<br></div>
+<div class="col-xs-6 text-right no-padding">Recover password</div>
+
+</div>
+</div>
+
+<div class="row">
+<div class="col-xs-2"></div>
+<div class="col-xs-10">
+<div class="col-xs-12 no-padding"><a href="http://localhost:3000/login#" class="btn btn-primary pull-right custom-button">Enter</a></div>
+</div>
+</div>
+</div> 
+</div>
 </template>
